--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; SebastianCorrea96.github.io 2015
                     </div>
                 </div>
             </div>
