--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     <li class="page-scroll">
                         <a href="#musica">Música favorita</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#info">Información básica</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
