--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
                             <li>
                                 <a href="http://websta.me/n/sebascorr" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
                             </li>
+                            <li>
+                                <abbr title="s.siza10@uniandes.edu.co"> <a href="" class="btn-social btn-outline"><i class="fa fa-fw fa-inbox"></i></a></abbr>
+                            </li>
                         </ul>
                     </div>
                 </div>
